# libdft64

./: Dockerfile  Makefile  README.md  env.init  gen_sig.py  stdio.inc  test  track.out
src/: function_desc.cpp  function_desc.h  function_hook.cpp  function_hook.h  libdft_api.cpp  libdft_api.h  makefile.rules  syscall_desc.cpp  syscall_desc.h  syscall_hook.cpp
taintfuzz/: Cargo.toml  README.md
taintfuzz/src/: main.rs
tools/: dummy_test.c  logger.h  makefile.rules  memmng.h  order_map  simple_test.c  taint.h  taint.hpp  taintfuzz.cpp  test.sh  tf_gen.hpp  tf_mem.hpp  tf_std_sig.inc  tf_stub.inc  tf_taint.h  tf_tools.hpp  tf_type.hpp  track.cpp
tools/tf_artifacts/: eval.py  test_results_libc.txt  test_results_libpthread.txt
