[package]
name = "taintfuzz"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.18", features = ["default"] }
log = "0.4"
libc = "0.2"
libafl = { path = "path_to_libafl" }
libafl_bolts = { path = "path_to_libafl_bolts" }
libafl_qemu = { path = "path_to_libafl_qemu" }
libafl_targets = { path = "path_to_libafl_targets" }

[lints]

